fixed ind message alignment

--- a/client/scss/chatWindow.scss
+++ b/client/scss/chatWindow.scss
@@ -68,28 +68,30 @@
     .message-title {
       font-weight: 500;
       font-size: 0.875rem;
+      font-style: italic;
       color: white;
       // background-color: #ccc;
       border-radius: 1rem;
       padding: 0.5rem;
-      margin: 0.5rem 1rem;
-      border: 0.1rem solid white;
-      box-shadow: 1.75px 1.75px 1.75px #555;;
+      margin: 0 1rem;
+      // border: 0.1rem solid white;
+      // box-shadow: 1.75px 1.75px 1.75px #555;;
     }
   }
 
   #message-area-container {
-    margin-top: 2.5rem;
-    display: flex;
-    justify-content: center;
 
     .messagesArea {
-      max-width: 40rem;
+      margin-top: 2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
-
+    
     ul {
       list-style: none; 
       padding: 0;
+      max-width: 40rem;
       display: flex;
       flex-direction: column;
     }
@@ -141,4 +143,11 @@
 
 
   }
+}
+
+.newMessageForm {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
